--- a/plant_tracker/src/main/res/layout/activity_create_record_type.xml
+++ b/plant_tracker/src/main/res/layout/activity_create_record_type.xml
@@ -46,7 +46,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary" />
+            android:background="@drawable/rounded_corner"
+            />
+
     </LinearLayout>
 
     <CheckBox
