Fixed bug where notes weren't being shown on records. Fixed drop shadow on text so the text will still be visible when the user sets a black background for a record template. Added border color and adjusted stroke width for rounded_corner.xml. New apk!

--- a/plant_tracker/src/main/res/layout/plant_recordable_tile.xml
+++ b/plant_tracker/src/main/res/layout/plant_recordable_tile.xml
@@ -20,16 +20,18 @@
             android:layout_alignParentLeft="false"
             android:layout_alignParentStart="false"
             android:layout_alignParentTop="false"
+            android:layout_marginLeft="4dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_corner"
             android:paddingLeft="10dp"
-            android:requiresFadingEdge="horizontal|vertical"
             android:shadowColor="@color/materialcolorpicker__white"
             android:shadowDx="5"
             android:shadowDy="5"
-            android:shadowRadius="10"
+            android:shadowRadius="1"
             android:text="WFO"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Subtitle"
             android:textColor="@android:color/black"
+            android:textColorHint="@color/materialcolorpicker__white"
             android:textSize="16sp"
             android:textStyle="normal" />
 
