--- a/plant_tracker/src/main/res/drawable/rounded_corner.xml
+++ b/plant_tracker/src/main/res/drawable/rounded_corner.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
-        android:width="1dp"
-        android:color="#ffffff" />
+        android:width="0.89dp"
+        android:color="#99999999" />
 
     <padding
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp" />
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp" />
 
     <corners android:radius="9dp" />
 </shape>
