--- a/plant_tracker/src/main/res/layout/custom_event_list_tile.xml
+++ b/plant_tracker/src/main/res/layout/custom_event_list_tile.xml
@@ -14,8 +14,8 @@
             android:layout_width="fill_parent"
             android:layout_height="20dp"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/firstLine"
-            android:layout_toEndOf="@+id/icon"
             android:ellipsize="marquee"
             android:gravity="top"
             android:maxLines="1"
@@ -36,10 +36,10 @@
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/secondLine"
             android:layout_alignParentTop="true"
             android:layout_marginRight="6dip"
-            android:src="@drawable/ic_event" />
+            android:src="@drawable/ic_record_template" />
     </RelativeLayout>
 
     <RelativeLayout
