--- a/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="top|right"
         android:layout_marginRight="7dp"
         android:layout_marginTop="7dp"
-        android:background="@android:color/holo_green_dark"
+        android:background="@color/colorPrimaryDark"
         android:clickable="true"
         app:backgroundTint="@android:color/background_light"
         app:fabSize="mini"
@@ -28,7 +28,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_green_dark"
+            android:background="@color/colorPrimaryDark"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
