--- a/plant_tracker/src/main/res/values/colors.xml
+++ b/plant_tracker/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#423f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FF3F51B5</color>
+    <color name="colorPrimaryDark">#FF669900</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
