--- a/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
@@ -10,11 +10,12 @@
         android:id="@+id/floatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_marginRight="7dp"
+        android:layout_gravity="top|end"
+        android:layout_marginEnd="7dp"
         android:layout_marginTop="7dp"
         android:background="@color/colorPrimaryDark"
         android:clickable="true"
+        android:focusable="true"
         app:backgroundTint="@android:color/background_light"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_add" />
