--- a/plant_tracker/src/main/res/layout/custom_event_list_tile.xml
+++ b/plant_tracker/src/main/res/layout/custom_event_list_tile.xml
@@ -18,7 +18,7 @@
             android:layout_below="@+id/firstLine"
             android:ellipsize="marquee"
             android:gravity="top"
-            android:maxLines="1"
+            android:singleLine="true"
             android:text=""
             android:textSize="12sp" />
 
@@ -29,7 +29,7 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/icon"
             android:gravity="center_vertical"
-            android:text="Example application"
+            android:text="@string/loremipsum"
             android:textSize="16sp" />
 
         <ImageView
@@ -38,7 +38,7 @@
             android:layout_height="fill_parent"
             android:layout_above="@+id/secondLine"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="6dip"
+            android:layout_marginEnd="6dip"
             android:src="@drawable/ic_record_template" />
     </RelativeLayout>
 
@@ -55,11 +55,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:alpha="0.75"
-            android:gravity="right|center_vertical"
-            android:paddingRight="5dp"
-            android:text="Custom Event"
+            android:gravity="end|center_vertical"
+            android:paddingStart="0dp"
+            android:paddingEnd="5dp"
+            android:text="@string/record_template"
             android:visibility="visible" />
     </RelativeLayout>
 
