--- a/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
+++ b/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/Theme.Design"
     android:orientation="vertical"
+    android:paddingBottom="3dp"
     android:paddingTop="3dp"
-    android:paddingBottom="3dp">
+    android:theme="@style/Theme.Design">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
@@ -18,10 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_weight="1"
+            android:layout_marginEnd="5dp"
             android:background="@drawable/rounded_corner"
+            android:paddingEnd="20dp"
             android:paddingStart="10dp"
-            android:paddingEnd="0dp"
             android:shadowColor="@color/materialcolorpicker__white"
             android:shadowDx="5"
             android:shadowDy="5"
@@ -33,6 +34,17 @@
             android:textSize="16sp"
             android:textStyle="normal" />
 
+        <ImageView
+            android:id="@+id/cameraIconImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+
+        <ImageView
+            android:id="@+id/dataPointsImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
@@ -45,10 +57,11 @@
 
     <TextView
         android:id="@+id/recordableSummaryTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="16dp"
+        android:layout_weight="1"
         android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:text="@string/loremipsum"
         android:textColor="@android:color/background_dark" />
 
