Last of the moving, put the activities package into the android package. Changed intent serializable keys into constants.

--- a/plant_tracker/src/main/res/layout/activity_create_record_type.xml
+++ b/plant_tracker/src/main/res/layout/activity_create_record_type.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    tools:context="com.nonsense.planttracker.activities.CreateRecordType">
+    tools:context=".android.activities.CreateRecordType">
 
     <LinearLayout
         android:layout_width="match_parent"
