--- a/plant_tracker/src/main/res/layout/layout_plant_tracker_header.xml
+++ b/plant_tracker/src/main/res/layout/layout_plant_tracker_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.nonsense.planttracker.activities.PlantTrackerUi">
+    tools:context=".android.activities.PlantTrackerUi">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton"
