--- a/plant_tracker/src/main/res/layout/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/layout_individual_plant.xml
@@ -12,25 +12,36 @@
         android:layout_height="56dp"
         android:layout_weight="0" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/imageLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/lastCaptureImageView"
-            android:layout_width="150dp"
+        <LinearLayout
+            android:id="@+id/imageBackgroundLayout"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/tableLayout"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            app:srcCompat="@drawable/ic_growing_plant" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/lastCaptureImageView"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/tableLayout"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_growing_plant" />
+        </LinearLayout>
 
         <TableLayout
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/lastCaptureImageView">
+            android:layout_toEndOf="@+id/lastCaptureImageView"
+            android:background="@color/materialcolorpicker__white">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -140,7 +151,7 @@
             </TableRow>
         </TableLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
