--- a/plant_tracker/src/main/res/layout/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/layout_individual_plant.xml
@@ -57,8 +57,6 @@
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imageBackgroundLayout"
             android:background="@color/materialcolorpicker__white">
 
             <TableRow
@@ -70,8 +68,8 @@
                     android:id="@+id/textView34"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="Grow Week"
+                    android:paddingEnd="5dp"
+                    android:text="@string/grow_week"
                     android:textSize="18sp" />
 
                 <TextView
@@ -92,7 +90,7 @@
                     android:id="@+id/textView36"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Grow Day"
+                    android:text="@string/grow_day"
                     android:textSize="18sp" />
 
                 <TextView
@@ -112,7 +110,7 @@
                     android:id="@+id/textView38"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Phase"
+                    android:text="@string/grow_phase"
                     android:textSize="18sp" />
 
                 <TextView
@@ -136,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="24sp"
                     android:paddingRight="10dp"
-                    android:text="Phase Wk."
+                    android:text="@string/phase_week"
                     android:textSize="18sp" />
 
                 <TextView
@@ -157,7 +155,7 @@
                     android:id="@+id/textView42"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Phase Day"
+                    android:text="@string/phase_day"
                     android:textSize="18sp" />
 
                 <TextView
