Hid menu and drawer options which are new or need to be re-implemented.

--- a/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
+++ b/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
@@ -43,18 +43,18 @@
         </menu>
     </item>
 
-    <item android:title="@string/drawer_title_transfer">
-        <menu>
-            <item
-                android:id="@+id/nav_export"
-                android:icon="@drawable/ic_export"
-                android:title="@string/drawer_item_export" />
-            <item
-                android:id="@+id/nav_import"
-                android:icon="@drawable/ic_import"
-                android:title="@string/drawer_item_import" />
-        </menu>
-    </item>
+    <!--<item android:title="@string/drawer_title_transfer">-->
+        <!--<menu>-->
+            <!--<item-->
+                <!--android:id="@+id/nav_export"-->
+                <!--android:icon="@drawable/ic_export"-->
+                <!--android:title="@string/drawer_item_export" />-->
+            <!--<item-->
+                <!--android:id="@+id/nav_import"-->
+                <!--android:icon="@drawable/ic_import"-->
+                <!--android:title="@string/drawer_item_import" />-->
+        <!--</menu>-->
+    <!--</item>-->
 
     <item android:title="@string/drawer_title_delete">
         <menu>
