--- a/plant_tracker/src/main/res/menu/plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/menu/plant_tracker_ui.xml
@@ -52,6 +52,14 @@
             android:visible="true"
             app:showAsAction="never" />
         <!--<item-->
+            <!--android:id="@+id/action_copy"-->
+            <!--android:checkable="false"-->
+            <!--android:enabled="true"-->
+            <!--android:orderInCategory="100"-->
+            <!--android:title="@string/action_copy"-->
+            <!--android:visible="true"-->
+            <!--app:showAsAction="never" />-->
+        <!--<item-->
             <!--android:id="@+id/action_set_reminder"-->
             <!--android:checkable="false"-->
             <!--android:enabled="true"-->
@@ -67,14 +75,14 @@
             android:title="@string/action_rename"
             android:visible="true"
             app:showAsAction="never" />
-        <item
-            android:id="@+id/action_change_start_date"
-            android:checkable="false"
-            android:enabled="true"
-            android:orderInCategory="100"
-            android:title="@string/action_change_start_date"
-            android:visible="true"
-            app:showAsAction="never" />
+        <!--<item-->
+            <!--android:id="@+id/action_change_start_date"-->
+            <!--android:checkable="false"-->
+            <!--android:enabled="true"-->
+            <!--android:orderInCategory="100"-->
+            <!--android:title="@string/action_change_start_date"-->
+            <!--android:visible="true"-->
+            <!--app:showAsAction="never" />-->
         <item
             android:id="@+id/action_archive_plant"
             android:checkable="false"
